--- a/src/app/header/toolbar/toolbar.component.html
+++ b/src/app/header/toolbar/toolbar.component.html
@@ -1,13 +1,10 @@
-<mat-toolbar>
-  <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
-    <mat-icon>menu</mat-icon>
+<mat-toolbar color="primary">
+  <button mat-icon-button class="example-icon" aria-label="menu">
+    <mat-icon>{{header.left}}</mat-icon>
   </button>
-  <span>My App</span>
+  <span>{{header.title}}</span>
   <span class="example-spacer"></span>
-  <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
-    <mat-icon>favorite</mat-icon>
-  </button>
-  <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
-    <mat-icon>share</mat-icon>
+  <button mat-icon-button class="example-icon" aria-label="opcoes">
+    <mat-icon>{{header.right}}</mat-icon>
   </button>
 </mat-toolbar>
